begin tp5 and try RNN, GRU and LSTM cells from pytorch

--- a/tp5/tme5.ipynb
+++ b/tp5/tme5.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,6 +375,311 @@
    "metadata": {},
    "source": [
     "# Generation de sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import unicodedata\n",
+    "import string\n",
+    "from typing import List\n",
+    "import torch\n",
+    "\n",
+    "PAD_IX = 0\n",
+    "EOS_IX = 1\n",
+    "\n",
+    "LETTRES = string.ascii_letters + string.punctuation + string.digits + ' '\n",
+    "id2lettre = dict(zip(range(2, len(LETTRES)+2), LETTRES))\n",
+    "id2lettre[PAD_IX] = '' ##NULL CHARACTER\n",
+    "id2lettre[EOS_IX] = '|'\n",
+    "lettre2id = dict(zip(id2lettre.values(),id2lettre.keys()))\n",
+    "\n",
+    "\n",
+    "def normalize(s):\n",
+    "    \"\"\" enlève les accents et les majuscules \"\"\"\n",
+    "    return ''.join(c for c in unicodedata.normalize('NFD', s) if  c in LETTRES)\n",
+    "\n",
+    "def string2code(s):\n",
+    "    \"\"\"prend une séquence de lettres et renvoie la séquence d'entiers correspondantes\"\"\"\n",
+    "    return torch.tensor([lettre2id[c] for c in normalize(s)])\n",
+    "\n",
+    "def code2string(t):\n",
+    "    \"\"\" prend une séquence d'entiers et renvoie la séquence de lettres correspondantes \"\"\"\n",
+    "    if type(t) !=list:\n",
+    "        t = t.tolist()\n",
+    "    return ''.join(id2lettre[i] for i in t)\n",
+    "\n",
+    "#  TODO: \n",
+    "\n",
+    "class TextDataset(Dataset):\n",
+    "    def __init__(self, text: str, *, maxsent=None, maxlen=None):\n",
+    "        maxlen = np.inf if maxlen==None else maxlen\n",
+    "        phrases = [phrase.strip() for phrase in text.split(\".\")]\n",
+    "        phrases = [strs2code(phrase).squeeze(1) for phrase in phrases if len(phrase)>1 and len(phrase)<maxlen]\n",
+    "        self.phrases = phrases\n",
+    "        \n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.phrases)\n",
+    "\n",
+    "    def __getitem__(self, i):\n",
+    "        return self.phrases[i]\n",
+    "\n",
+    "def collate_fn(samples):\n",
+    "    \n",
+    "    lenMax = np.max([len(e) for e in samples])\n",
+    "    res = []\n",
+    "    eos = torch.tensor([EOS_IX], dtype=torch.int)\n",
+    "\n",
+    "    for sample in samples:\n",
+    "        pads = torch.full((lenMax-len(sample),), PAD_IX, dtype=torch.int)\n",
+    "        res.append(torch.cat((sample, eos, pads), 0))\n",
+    "\n",
+    "    return torch.stack(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrases = [phrase.strip() for phrase in test.split(\".\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"C'est\", 'Un', 'Test', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(phrases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-b0749ffb8ad1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# Longueur maximum\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# e dans les deux cas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "test = \"C'est. Un. Test.\"\n",
+    "ds = TextDataset(test)\n",
+    "loader = DataLoader(ds, collate_fn=collate_fn, batch_size=3)\n",
+    "data = next(iter(loader))\n",
+    "\n",
+    "# Longueur maximum\n",
+    "assert data.shape == (7, 3)\n",
+    "\n",
+    "# e dans les deux cas\n",
+    "assert data[2, 0] == data[1, 2]\n",
+    "# les chaînes sont identiques\n",
+    "assert test == \" \".join([code2string(s).replace(\"|\",\"\") for s in data.t()])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[30, 60,  6, 20, 21,  1],\n",
+       "        [48, 15,  0,  0,  0,  1],\n",
+       "        [47,  6, 20, 21,  0,  1]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = nn.CrossEntropyLoss(reduction=\"none\")\n",
+    "input = torch.randn(3, 5, requires_grad=True)\n",
+    "target = torch.empty(3, dtype=torch.long).random_(5)\n",
+    "output = loss(input, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.6207, -0.7542,  0.0652,  0.3838, -3.1213],\n",
+       "        [ 0.3055, -1.0484,  0.3335,  0.2342, -0.8832],\n",
+       "        [ 0.5134, -0.6117,  0.8091,  0.4683,  0.0508]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([4, 0, 2])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([4.7126, 1.2592, 1.1522], grad_fn=<NllLossBackward>)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss2 = nn.CrossEntropyLoss(reduction=\"mean\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output2 = loss2(input, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2.3747, grad_fn=<NllLossBackward>)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output2"
    ]
   },
   {
