--- a/tp5/tme5.ipynb
+++ b/tp5/tme5.ipynb
@@ -2,117 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import logging\n",
-    "import csv\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from collections import Counter\n",
+    "from utils import normalize, cleanTrumpData, Dataset_trumpOld, Dataset_trump, strs2code \n",
+    "from textloader import TextDataset, collate_fn\n",
+    "from tp5 import RNN, GRU, LSTM\n",
+    "import string\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "\n",
-    "\n",
-    "def fill_na(mat):\n",
-    "    ix,iy = np.where(np.isnan(mat))\n",
-    "    for i,j in zip(ix,iy):\n",
-    "        if np.isnan(mat[i+1,j]):\n",
-    "            mat[i,j]=mat[i-1,j]\n",
-    "        else:\n",
-    "            mat[i,j]=(mat[i-1,j]+mat[i+1,j])/2.\n",
-    "    return mat\n",
-    "\n",
-    "\n",
-    "def read_temps(path):\n",
-    "    \"\"\"Lit le fichier de températures\"\"\"\n",
-    "    data = []\n",
-    "    with open(path, \"rt\") as fp:\n",
-    "        reader = csv.reader(fp, delimiter=',')\n",
-    "        next(reader)\n",
-    "        for row in reader:\n",
-    "            if not row[1].replace(\".\",\"\").isdigit():\n",
-    "                continue\n",
-    "            data.append([float(x) if x != \"\" else float('nan') for x in row[1:]])\n",
-    "    return torch.tensor(fill_na(np.array(data)), dtype=torch.float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class RNN(nn.Module):\n",
-    "    \n",
-    "    def __init__(self, latent_dim, input_dim, output_dim):\n",
-    "        super().__init__()\n",
-    "        self.latent_size = latent_dim\n",
-    "        self.input_dim = input_dim\n",
-    "        self.output_dim = output_dim\n",
-    "        self.act_encode = torch.tanh\n",
-    "        self.act_decode = torch.tanh\n",
-    "\n",
-    "        # Network parameters\n",
-    "        self.linearX = nn.Linear(input_dim, latent_dim, bias=True)\n",
-    "        self.linearH = nn.Linear(latent_dim, latent_dim, bias=False)\n",
-    "        \n",
-    "        self.linearD = nn.Linear(latent_dim, output_dim, bias=True)\n",
-    "        \n",
-    "\n",
-    "    def one_step(self, x, h):\n",
-    "        \"\"\" \n",
-    "        compute the hidden state for one step of time\n",
-    "        dim(x) = batch x dimX\n",
-    "        dim(h) = batch x latent_size\n",
-    "        \"\"\"\n",
-    "        return self.act_encode(self.linearX(x) + self.linearH(h))\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        \"\"\"\n",
-    "        Treat a batch of sequences,\n",
-    "        x -> batch of sequences, dim(X) = lenght_sequence x batch x dimX\n",
-    "        h -> init hidden state, dim(h) = batch x latent_size\n",
-    "\n",
-    "        return a batch of hidden state sequences -> dim = lenght_sequence x batch x latent_size\n",
-    "        \"\"\"\n",
-    "        length, batch, dim = x.shape\n",
-    "        res = []\n",
-    "        res.append(self.one_step(x[0], torch.zeros((batch, self.latent_size), dtype=torch.float)))\n",
-    "\n",
-    "        for i in range(1,length):\n",
-    "            res.append(self.one_step(x[i], res[i-1]))\n",
-    "\n",
-    "        return torch.stack(res)\n",
-    "\n",
-    "        \n",
-    "    def decode(self, h):\n",
-    "        \"\"\"\n",
-    "        decode a batch of hidden state\n",
-    "        \"\"\"\n",
-    "        return self.act_decode(self.linearD(h))\n",
-    "    "
+    "logging.basicConfig(level=logging.INFO)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import string\n",
-    "import unicodedata\n",
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,37 +35,12 @@
     "id2lettre = dict(zip(range(2, len(LETTRES)+2), LETTRES))\n",
     "id2lettre[PAD_IX] = '' ##NULL CHARACTER\n",
     "id2lettre[EOS_IX] = '|'\n",
-    "lettre2id = dict(zip(id2lettre.values(), id2lettre.keys()))\n",
-    "\n",
-    "def normalize(s):\n",
-    "    return ''.join(c for c in unicodedata.normalize('NFD', s) if c in LETTRES)\n",
-    "\n",
-    "def string2code(s):\n",
-    "    return torch.tensor([lettre2id[c] for c in normalize(s)])\n",
-    "\n",
-    "def code2string(t):\n",
-    "    if(type(t)!=list):\n",
-    "        t = t.tolist()\n",
-    "    return ''.join(id2lettre[i] for i in t)\n",
-    "\n",
-    "def str2code(s):\n",
-    "    return [lettre2id[c] for c in s]\n",
-    "\n",
-    "def strs2code(ss):\n",
-    "    return torch.LongTensor([str2code(s) for s in ss])\n",
-    "\n",
-    "def cleanTrumpData(s):\n",
-    "    tmp = re.sub(\"\\[[^]]+\\]\", \"\", s) #delete non vocan words as [applause]\n",
-    "    tmp = re.sub(\":\\s*pmurT\\s*\\.\", \":%.\", tmp[::-1]) #reverse string and replace trump by %\n",
-    "    tmp = re.sub(\":[^.%]+?\\.\", \":@.\", tmp) # place all no trump speaker by @\n",
-    "    tmp = re.sub(\"^\\s*Trump\", \"%\", tmp[::-1]) #reverse string and replace first Trump by %\n",
-    "    tmp = re.sub(\"@\\s*:[^%]+?%\", \"%\", tmp)  #delete words not say by trump\n",
-    "    return re.sub(\"%:\", \"\", tmp)# delete %: wich is just to show wo speaks (but now it is trump every time)"
+    "lettre2id = dict(zip(id2lettre.values(), id2lettre.keys()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,186 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TextDataset(Dataset):\n",
-    "    def __init__(self, text: str, *, maxsent=None, maxlen=None):\n",
-    "        maxlen = np.inf if maxlen==None else maxlen\n",
-    "        phrases = [phrase.strip() for phrase in text.split(\".\")]\n",
-    "        phrases = [strs2code(phrase).squeeze(1) for phrase in phrases if len(phrase)>5 and len(phrase)<maxlen]\n",
-    "        self.phrases = phrases\n",
-    "        \n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.phrases)\n",
-    "\n",
-    "    def __getitem__(self, i):\n",
-    "        return self.phrases[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def collate_fn(samples):\n",
-    "    \n",
-    "    lenMax = np.max([len(e) for e in samples])\n",
-    "    res = []\n",
-    "    eos = torch.tensor([EOS_IX], dtype=torch.int)\n",
-    "\n",
-    "    for sample in samples:\n",
-    "        pads = torch.full((lenMax-len(sample),), PAD_IX, dtype=torch.int)\n",
-    "        res.append(torch.cat((sample, pads, eos), 0))\n",
-    "\n",
-    "    return torch.stack(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 3\n",
     "loader = DataLoader(TextDataset(cleanedNormalizedData), collate_fn=collate_fn, batch_size=BATCH_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class GRU(nn.Module):\n",
-    "    \n",
-    "    def __init__(self, latent_dim, input_dim, output_dim):\n",
-    "        super().__init__()\n",
-    "        self.latent_size = latent_dim\n",
-    "        self.input_dim = input_dim\n",
-    "        self.output_dim = output_dim\n",
-    "        \n",
-    "        self.sigmoid = torch.sigmoid\n",
-    "        self.tanh = torch.tanh\n",
-    "\n",
-    "\n",
-    "        # Network parameters\n",
-    "        self.linearZ = nn.Linear(input_dim+latent_dim, latent_dim, bias=False)\n",
-    "        self.linearR = nn.Linear(input_dim+latent_dim, input_dim+latent_dim, bias=False)\n",
-    "        self.linearH = nn.Linear(input_dim+latent_dim, latent_dim, bias=False)\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "    def one_step(self, x, h):\n",
-    "        \"\"\" \n",
-    "        compute the hidden state for one step of time\n",
-    "        dim(x) = batch x dimX\n",
-    "        dim(h) = batch x latent_size\n",
-    "        \"\"\"\n",
-    "        concatHX = torch.cat((x, h), 1)\n",
-    "        zt = self.sigmoid(self.linearZ(concatHX))\n",
-    "        rt = self.sigmoid(self.linearR(concatHX))\n",
-    "        ht = (1-zt)*h + zt* self.tanh(self.linearH(rt*concatHX))\n",
-    "        return ht\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        \"\"\"\n",
-    "        Treat a batch of sequences,\n",
-    "        x -> batch of sequences, dim(X) = lenght_sequence x batch x dimX\n",
-    "        h -> init hidden state, dim(h) = batch x latent_size\n",
-    "\n",
-    "        return a batch of hidden state sequences -> dim = lenght_sequence x batch x latent_size\n",
-    "        \"\"\"\n",
-    "        length, batch, dim = x.shape\n",
-    "        res = []\n",
-    "        res.append(self.one_step(x[0], torch.zeros((batch, self.latent_size), dtype=torch.float)))\n",
-    "\n",
-    "        for i in range(1,length):\n",
-    "            res.append(self.one_step(x[i], res[i-1]))\n",
-    "\n",
-    "        return torch.stack(res)\n",
-    "\n",
-    "        \n",
-    "    def decode(self, h):\n",
-    "        \"\"\"\n",
-    "        decode a batch of hidden state\n",
-    "        \"\"\"\n",
-    "        return self.act_decode(self.linearD(h))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class LSTM(nn.Module):\n",
-    "    \n",
-    "    def __init__(self, latent_dim, input_dim, output_dim):\n",
-    "        super().__init__()\n",
-    "        self.latent_size = latent_dim\n",
-    "        self.input_dim = input_dim\n",
-    "        self.output_dim = output_dim\n",
-    "        \n",
-    "        self.sigmoid = torch.sigmoid\n",
-    "        self.tanh = torch.tanh\n",
-    "        \n",
-    "        self.ct = torch.zeros((BATCH_SIZE, latent_dim))\n",
-    "\n",
-    "\n",
-    "        # Network parameters\n",
-    "        self.linearF = nn.Linear(input_dim+latent_dim, latent_dim, bias=True)\n",
-    "        self.linearI = nn.Linear(input_dim+latent_dim, latent_dim, bias=True)\n",
-    "        self.linearC = nn.Linear(input_dim+latent_dim, latent_dim, bias=True)\n",
-    "        self.linearO = nn.Linear(input_dim+latent_dim, latent_dim, bias=True)\n",
-    "        \n",
-    "\n",
-    "    def one_step(self, x, h):\n",
-    "        \"\"\" \n",
-    "        compute the hidden state for one step of time\n",
-    "        dim(x) = batch x dimX\n",
-    "        dim(h) = batch x latent_size\n",
-    "        \"\"\"\n",
-    "        concatHX = torch.cat((x, h), 1)\n",
-    "        ft = self.sigmoid(self.linearF(concatHX))\n",
-    "        it = self.sigmoid(self.linearI(concatHX))\n",
-    "        self.ct = ft*self.ct + it*self.tanh(self.linearC(concatHX))\n",
-    "        ot = self.sigmoid(self.linearO(concatHX))\n",
-    "        ht = ot*self.tanh(ct)\n",
-    "        \n",
-    "        zt = self.sigmoid(self.linearZ(concatHX))\n",
-    "        rt = self.sigmoid(self.linearR(concatHX))\n",
-    "        ht = (1-zt)*h + zt* self.tanh(self.linearH(rt*concatHX))\n",
-    "        return ht\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        \"\"\"\n",
-    "        Treat a batch of sequences,\n",
-    "        x -> batch of sequences, dim(X) = lenght_sequence x batch x dimX\n",
-    "        h -> init hidden state, dim(h) = batch x latent_size\n",
-    "\n",
-    "        return a batch of hidden state sequences -> dim = lenght_sequence x batch x latent_size\n",
-    "        \"\"\"\n",
-    "        length, batch, dim = x.shape\n",
-    "        res = []\n",
-    "        res.append(self.one_step(x[0], torch.zeros((batch, self.latent_size), dtype=torch.float)))\n",
-    "\n",
-    "        for i in range(1,length):\n",
-    "            res.append(self.one_step(x[i], res[i-1]))\n",
-    "\n",
-    "        return torch.stack(res)\n",
-    "\n",
-    "        \n",
-    "    def decode(self, h):\n",
-    "        \"\"\"\n",
-    "        decode a batch of hidden state\n",
-    "        \"\"\"\n",
-    "        return self.act_decode(self.linearD(h))\n",
-    "    "
    ]
   },
   {
@@ -379,162 +90,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "import unicodedata\n",
-    "import string\n",
-    "from typing import List\n",
-    "import torch\n",
-    "\n",
-    "PAD_IX = 0\n",
-    "EOS_IX = 1\n",
-    "\n",
-    "LETTRES = string.ascii_letters + string.punctuation + string.digits + ' '\n",
-    "id2lettre = dict(zip(range(2, len(LETTRES)+2), LETTRES))\n",
-    "id2lettre[PAD_IX] = '' ##NULL CHARACTER\n",
-    "id2lettre[EOS_IX] = '|'\n",
-    "lettre2id = dict(zip(id2lettre.values(),id2lettre.keys()))\n",
-    "\n",
-    "\n",
-    "def normalize(s):\n",
-    "    \"\"\" enlève les accents et les majuscules \"\"\"\n",
-    "    return ''.join(c for c in unicodedata.normalize('NFD', s) if  c in LETTRES)\n",
-    "\n",
-    "def string2code(s):\n",
-    "    \"\"\"prend une séquence de lettres et renvoie la séquence d'entiers correspondantes\"\"\"\n",
-    "    return torch.tensor([lettre2id[c] for c in normalize(s)])\n",
-    "\n",
-    "def code2string(t):\n",
-    "    \"\"\" prend une séquence d'entiers et renvoie la séquence de lettres correspondantes \"\"\"\n",
-    "    if type(t) !=list:\n",
-    "        t = t.tolist()\n",
-    "    return ''.join(id2lettre[i] for i in t)\n",
-    "\n",
-    "#  TODO: \n",
-    "\n",
-    "class TextDataset(Dataset):\n",
-    "    def __init__(self, text: str, *, maxsent=None, maxlen=None):\n",
-    "        maxlen = np.inf if maxlen==None else maxlen\n",
-    "        phrases = [phrase.strip() for phrase in text.split(\".\")]\n",
-    "        phrases = [strs2code(phrase).squeeze(1) for phrase in phrases if len(phrase)>1 and len(phrase)<maxlen]\n",
-    "        self.phrases = phrases\n",
-    "        \n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.phrases)\n",
-    "\n",
-    "    def __getitem__(self, i):\n",
-    "        return self.phrases[i]\n",
-    "\n",
-    "def collate_fn(samples):\n",
-    "    \n",
-    "    lenMax = np.max([len(e) for e in samples])\n",
-    "    res = []\n",
-    "    eos = torch.tensor([EOS_IX], dtype=torch.int)\n",
-    "\n",
-    "    for sample in samples:\n",
-    "        pads = torch.full((lenMax-len(sample),), PAD_IX, dtype=torch.int)\n",
-    "        res.append(torch.cat((sample, eos, pads), 0))\n",
-    "\n",
-    "    return torch.stack(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phrases = [phrase.strip() for phrase in test.split(\".\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\"C'est\", 'Un', 'Test', '']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(phrases)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-b0749ffb8ad1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# Longueur maximum\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# e dans les deux cas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "test = \"C'est. Un. Test.\"\n",
-    "ds = TextDataset(test)\n",
-    "loader = DataLoader(ds, collate_fn=collate_fn, batch_size=3)\n",
-    "data = next(iter(loader))\n",
-    "\n",
-    "# Longueur maximum\n",
-    "assert data.shape == (7, 3)\n",
-    "\n",
-    "# e dans les deux cas\n",
-    "assert data[2, 0] == data[1, 2]\n",
-    "# les chaînes sont identiques\n",
-    "assert test == \" \".join([code2string(s).replace(\"|\",\"\") for s in data.t()])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[30, 60,  6, 20, 21,  1],\n",
-       "        [48, 15,  0,  0,  0,  1],\n",
-       "        [47,  6, 20, 21,  0,  1]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -548,27 +103,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from torch import nn"
+    "# Test crossEntropy with batch "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -684,6 +223,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2.3747, grad_fn=<MeanBackward0>)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -695,18 +254,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
   }
  },
  "nbformat": 4,
