Add beam search and clean code

--- a/tp4/tme4.ipynb
+++ b/tp4/tme4.ipynb
@@ -17,9 +17,9 @@
     "import torch.nn as nn\n",
     "import logging\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from utils import normalize, cleanTrumpData, read_temps, fill_na, \\\n",
-    "                Dataset_trumpOld, Dataset_trump, Dataset_temp, RNN, strs2code, id2lettre \n",
-    "import string\n",
+    "from utils import normalize, cleanTrumpData, read_temps, \\\n",
+    "                Dataset_trump, Dataset_tempClassif, Dataset_tempSerie, RNN, \\\n",
+    "                id2lettre, string2code\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "logging.basicConfig(level=logging.INFO)"
@@ -70,8 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = DataLoader(Dataset_temp(temp_train, None, longueurSeq), shuffle=True, batch_size=BATCH_SIZE)\n",
-    "test_loader = DataLoader(Dataset_temp(temp_test, None, longueurSeq), shuffle=True, batch_size=BATCH_SIZE)"
+    "train_loader = DataLoader(Dataset_tempClassif(temp_train, None, longueurSeq), shuffle=True, batch_size=BATCH_SIZE)\n",
+    "test_loader = DataLoader(Dataset_tempClassif(temp_test, None, longueurSeq), shuffle=True, batch_size=BATCH_SIZE)"
    ]
   },
   {
@@ -104,16 +104,16 @@
      "output_type": "stream",
      "text": [
       "Training ...\n",
-      "Itérations 0: train loss 1.6772527694702148, test loss 1.6328250169754028\n",
-      "Itérations 1: train loss 1.6704071760177612, test loss 1.4179824590682983\n",
-      "Itérations 2: train loss 1.6533112525939941, test loss 1.5643876791000366\n",
-      "Itérations 3: train loss 1.5116451978683472, test loss 1.5273733139038086\n",
-      "Itérations 4: train loss 1.71176016330719, test loss 1.6397552490234375\n",
-      "Itérations 5: train loss 1.665434718132019, test loss 1.6382112503051758\n",
-      "Itérations 6: train loss 1.6335707902908325, test loss 1.6256200075149536\n",
-      "Itérations 7: train loss 1.5858124494552612, test loss 1.6263929605484009\n",
-      "Itérations 8: train loss 1.6088508367538452, test loss 1.613486647605896\n",
-      "Itérations 9: train loss 1.61981201171875, test loss 1.5955265760421753\n"
+      "Itérations 0: train loss 1.6130918264389038, test loss 1.761473298072815\n",
+      "Itérations 1: train loss 1.7357286214828491, test loss 1.5339568853378296\n",
+      "Itérations 2: train loss 1.6905523538589478, test loss 1.6691385507583618\n",
+      "Itérations 3: train loss 1.5939311981201172, test loss 1.660255789756775\n",
+      "Itérations 4: train loss 1.5693974494934082, test loss 1.6154125928878784\n",
+      "Itérations 5: train loss 1.708225131034851, test loss 1.5710887908935547\n",
+      "Itérations 6: train loss 1.5808273553848267, test loss 1.6105331182479858\n",
+      "Itérations 7: train loss 1.5961437225341797, test loss 1.5861501693725586\n",
+      "Itérations 8: train loss 1.5846524238586426, test loss 1.6154108047485352\n",
+      "Itérations 9: train loss 1.6296206712722778, test loss 1.6009403467178345\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
     "    for i, (sequences, labels) in enumerate(train_loader):\n",
     "\n",
     "        optimizer.zero_grad()\n",
-    "\n",
+    "        \n",
     "        hidden_states = model(sequences.permute(1,0,2))\n",
     "        outputs = model.decode(hidden_states[-1])\n",
     "\n",
@@ -158,11 +158,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "temp_train = read_temps(\"data/tempAMAL_train.csv\").unsqueeze(2)\n",
+    "temp_test = read_temps(\"data/tempAMAL_test.csv\").unsqueeze(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nbClasse = 1\n",
+    "longueurData = 33\n",
+    "BATCH_SIZE = 6\n",
+    "longueurSeq = 4\n",
+    "\n",
+    "temp_train = temp_train[:longueurData, :nbClasse]\n",
+    "temp_test = temp_test[:longueurData, :nbClasse]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = DataLoader(Dataset_tempSerie(temp_train, None, longueurSeq), shuffle=True, batch_size=BATCH_SIZE, drop_last=True)\n",
+    "test_loader = DataLoader(Dataset_tempSerie(temp_test, None, longueurSeq), shuffle=True, batch_size=BATCH_SIZE, drop_last=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RNN(latent_size, input_dim, output_dim, act_decode=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 1\n",
+    "latent_size = 5\n",
+    "input_dim = 1\n",
+    "output_dim = 1\n",
+    "lr=1e-4\n",
+    "\n",
+    "optimizer = torch.optim.Adam(params=model.parameters(), lr=lr)\n",
+    "optimizer.zero_grad()\n",
+    "\n",
+    "criterion = torch.nn.MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training ...\n",
+      "Itérations 0: train loss 81193.7578125, test loss 86993.65625\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training loop\n",
+    "print(\"Training ...\")\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    for i, (sequences, labels) in enumerate(train_loader):\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        #import ipdb; ipdb.set_trace()\n",
+    "        X = sequences[:, :-1, :]\n",
+    "        y = sequences[:, 1:, :]\n",
+    "\n",
+    "        hidden_states = model(X.permute(1,0,2))\n",
+    "        outputs = model.decode(hidden_states)\n",
+    "        \n",
+    "        train_loss = criterion(outputs, y.permute(1,0,2))\n",
+    "        train_loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        #writer.add_scalar('Loss/train', train_loss, epoch)\n",
+    "\n",
+    "    model.eval()\n",
+    "    for i, (sequences, labels) in enumerate(test_loader):\n",
+    "        with torch.no_grad():\n",
+    "            X = sequences[:, :-1, :]\n",
+    "            y = sequences[:, 1:, :]\n",
+    "\n",
+    "            hidden_states = model(X.permute(1,0,2))\n",
+    "            outputs = model.decode(hidden_states)\n",
+    "            test_loss = criterion(outputs, y.permute(1,0,2))\n",
+    "\n",
+    "        #writer.add_scalar('Loss/test', test_loss, epoch)\n",
+    "    #if(epoch%100==0):\n",
+    "    print(f\"Itérations {epoch}: train loss {train_loss}, test loss {test_loss}\")"
    ]
   },
   {
@@ -181,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,39 +295,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cleanedData = cleanTrumpData(data)\n",
-    "cleanedData = cleanTrumpData(data).lower()"
+    "cleanedData = cleanTrumpData(data)\n",
+    "cleanedNormalizedData = string2code(cleanedData)\n",
+    "cleanedNormalizedData = cleanedNormalizedData[:300]#To have a little sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cleanedNormalizedData = normalize(cleanedData)\n",
-    "cleanedNormalizedData = cleanedNormalizedData[:100]#To have a little sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "coefTrain = 0.8\n",
     "nbTrain = int(len(cleanedNormalizedData)*coefTrain)\n",
     "trainData, testData = cleanedNormalizedData[:nbTrain], cleanedNormalizedData[nbTrain:]\n",
-    "BATCH_SIZE = 32"
+    "BATCH_SIZE = 64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,12 +327,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_epochs = 10\n",
-    "latent_size = 10\n",
+    "num_epochs = 1\n",
+    "latent_size = 64\n",
     "input_dim = len(id2lettre)\n",
     "output_dim = len(id2lettre)\n",
     "lr=1e-3\n",
@@ -252,7 +347,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getOuputs(model, seqs):\n",
+    "    X = embedding(seqs[:, :-1])\n",
+    "    hidden_states = model(X.permute(1,0,2)).permute(1,0,2)\n",
+    "    return model.decode(hidden_states).view(-1, X.shape[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -260,21 +367,11 @@
      "output_type": "stream",
      "text": [
       "Training ...\n",
-      "Itérations 0: train loss 3.3564438819885254, test loss 3.4521713256835938\n",
-      "Itérations 1: train loss 3.3164329528808594, test loss 3.449589490890503\n",
-      "Itérations 2: train loss 3.3680641651153564, test loss 3.422910690307617\n",
-      "Itérations 3: train loss 3.3876781463623047, test loss 3.400259017944336\n",
-      "Itérations 4: train loss 3.2536683082580566, test loss 3.4162790775299072\n",
-      "Itérations 5: train loss 3.2927563190460205, test loss 3.4094583988189697\n",
-      "Itérations 6: train loss 3.3133275508880615, test loss 3.3913044929504395\n",
-      "Itérations 7: train loss 3.2898683547973633, test loss 3.381716012954712\n",
-      "Itérations 8: train loss 3.2362546920776367, test loss 3.3980188369750977\n",
-      "Itérations 9: train loss 3.2678513526916504, test loss 3.384019136428833\n"
+      "Itérations 0: train loss 3.319438934326172, test loss 3.282474994659424\n"
      ]
     }
    ],
    "source": [
-    "#Training loop with error\n",
     "train_loader = DataLoader(Dataset_trump(trainData, None), shuffle=True, batch_size=BATCH_SIZE)\n",
     "test_loader = DataLoader(Dataset_trump(testData, None), shuffle=True, batch_size=BATCH_SIZE)\n",
     "\n",
@@ -283,81 +380,16 @@
     "\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
-    "    for i, (sequences, labels) in enumerate(train_loader):\n",
+    "    for i, (sequences, _) in enumerate(train_loader):\n",
     "\n",
     "        optimizer.zero_grad()\n",
-    "\n",
-    "        X = embedding(strs2code(sequences))\n",
-    "        y = strs2code(labels).squeeze(1)\n",
-    "\n",
-    "        hidden_states = model(X.permute(1,0,2))\n",
-    "        outputs = model.decode(hidden_states)\n",
-    "        train_loss = criterion(outputs.view(-1, outputs.shape[2]), y.view(-1))\n",
-    "        train_loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        #writer.add_scalar('Loss/train', train_loss, epoch)\n",
-    "\n",
-    "    model.eval()\n",
-    "    for i, (sequences, labels) in enumerate(test_loader):\n",
-    "        with torch.no_grad():\n",
-    "            X = embedding(strs2code(sequences))\n",
-    "            y = strs2code(labels).squeeze(1)\n",
-    "\n",
-    "            hidden_states = model(X.permute(1,0,2))\n",
-    "            outputs = model.decode(hidden_states)\n",
-    "            test_loss = criterion(outputs.view(-1, outputs.shape[2]), y.view(-1))\n",
-    "\n",
-    "        #writer.add_scalar('Loss/test', test_loss, epoch)\n",
-    "  #if(epoch%10==0):\n",
-    "    print(f\"Itérations {epoch}: train loss {train_loss}, test loss {test_loss}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training ...\n",
-      "Itérations 0: train loss 3.5792267322540283, test loss 3.2277398109436035\n",
-      "Itérations 1: train loss 3.3816404342651367, test loss 3.218677043914795\n",
-      "Itérations 2: train loss 3.29781174659729, test loss 3.2091362476348877\n",
-      "Itérations 3: train loss 3.5039656162261963, test loss 3.1998813152313232\n",
-      "Itérations 4: train loss 3.503018379211426, test loss 3.1919660568237305\n",
-      "Itérations 5: train loss 3.547041893005371, test loss 3.1848390102386475\n",
-      "Itérations 6: train loss 3.386291265487671, test loss 3.1769325733184814\n",
-      "Itérations 7: train loss 3.1281824111938477, test loss 3.1691927909851074\n",
-      "Itérations 8: train loss 3.317228078842163, test loss 3.1618258953094482\n",
-      "Itérations 9: train loss 3.4206831455230713, test loss 3.1546719074249268\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Training loop without error but without exploiting all result\n",
-    "train_loader = DataLoader(Dataset_trumpOld(trainData, None), shuffle=True, batch_size=BATCH_SIZE)\n",
-    "test_loader = DataLoader(Dataset_trumpOld(testData, None), shuffle=True, batch_size=BATCH_SIZE)\n",
-    "\n",
-    "# Training loop\n",
-    "print(\"Training ...\")\n",
-    "\n",
-    "for epoch in range(num_epochs):\n",
-    "    model.train()\n",
-    "    for i, (sequences, labels) in enumerate(train_loader):\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "        X = embedding(strs2code(sequences))\n",
-    "        y = strs2code(labels).squeeze(1)\n",
-    "\n",
-    "        hidden_states = model(X.permute(1,0,2))\n",
-    "        outputs = model.decode(hidden_states[-1])\n",
     "        \n",
+    "        outputs = getOuputs(model, sequences)\n",
+    "        y = sequences[:, 1:].reshape(-1)\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        #import ipdb; ipdb.set_trace()\n",
     "        train_loss = criterion(outputs, y)\n",
     "        train_loss.backward()\n",
     "        optimizer.step()\n",
@@ -367,11 +399,9 @@
     "    model.eval()\n",
     "    for i, (sequences, labels) in enumerate(test_loader):\n",
     "        with torch.no_grad():\n",
-    "            X = embedding(strs2code(sequences))\n",
-    "            y = strs2code(labels).squeeze(1)\n",
+    "            outputs = getOuputs(model, sequences)\n",
+    "            y = sequences[:, 1:].reshape(-1)\n",
     "\n",
-    "            hidden_states = model(X.permute(1,0,2))\n",
-    "            outputs = model.decode(hidden_states[-1])\n",
     "            test_loss = criterion(outputs, y)\n",
     "\n",
     "        #writer.add_scalar('Loss/test', test_loss, epoch)\n",
@@ -381,27 +411,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Génération\n",
-    "debut = \"thank y\"\n",
+    "#generation\n",
+    "start = \"thank y\"\n",
     "nbGenere = 20\n",
-    "sm = nn.Softmax(dim=1)\n",
+    "sm = nn.LogSoftmax(dim=1)\n",
     "\n",
     "xgens = []\n",
     "\n",
     "for i in range(nbGenere):\n",
     "    \n",
     "    if(i==0):#Première fois on forward la sequence\n",
-    "        X = embedding(strs2code([debut]))\n",
+    "        X = embedding(string2code(start).unsqueeze(0))\n",
     "        hidden_states = model(X.permute(1,0,2))\n",
     "        hgen = hidden_states[-1]\n",
     "        outputs = model.decode(hgen)\n",
     "        xgen = id2lettre[int(sm(outputs)[0].argmax())]\n",
     "    else:#Ensuite on génère en one step\n",
-    "        x = embedding(strs2code([xgen])).squeeze(0)\n",
+    "        x = embedding(string2code(xgen))\n",
     "        hgen = model.one_step(x,hgen)\n",
     "        outputs = model.decode(hgen)\n",
     "        xgen = id2lettre[int(sm(outputs)[0].argmax())]\n",
@@ -410,16 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'tatatatatatatatatata'"
+       "'iqrzeeeeeeeeeeeeeeee'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
