--- a/tp5/tme5.ipynb
+++ b/tp5/tme5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,10 @@
     "import numpy as np\n",
     "import logging\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from utils import normalize, cleanTrumpData, Dataset_trumpOld, Dataset_trump, strs2code \n",
+    "from utils import normalize, cleanTrumpData, Dataset_trump, id2lettre, string2code, EOS_IX\n",
     "from textloader import TextDataset, collate_fn\n",
-    "from tp5 import RNN, GRU, LSTM\n",
-    "import string\n",
+    "from tp5 import RNN, GRU, LSTM, maskedCrossEntropy\n",
+    "from generate import generate, generate_beam\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "logging.basicConfig(level=logging.INFO)"
@@ -22,25 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PAD_IX = 0\n",
-    "EOS_IX = 1\n",
-    "\n",
-    "#LETTRES = string.ascii_letters + string.punctuation+string.digits+' '\n",
-    "#LETTRES = string.ascii_letters+' '\n",
-    "LETTRES = string.ascii_letters[:26]+\".\"+' '\n",
-    "id2lettre = dict(zip(range(2, len(LETTRES)+2), LETTRES))\n",
-    "id2lettre[PAD_IX] = '' ##NULL CHARACTER\n",
-    "id2lettre[EOS_IX] = '|'\n",
-    "lettre2id = dict(zip(id2lettre.values(), id2lettre.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,195 +32,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleanedData = cleanTrumpData(data)[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coefTrain = 0.8\n",
+    "nbTrain = int(len(cleanedData)*coefTrain)\n",
+    "trainData, testData = cleanedData[:nbTrain], cleanedData[nbTrain:]#Ici on sépare la données brut mais les phrases ayant des tailles différentes, on pourrait avoir une train/test ne respectant pas la proportion indiquer\n",
+    "BATCH_SIZE = 32\n",
+    "embedding = nn.Embedding(len(id2lettre), len(id2lettre))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 2\n",
+    "latent_size = 64\n",
+    "input_dim = len(id2lettre)\n",
+    "output_dim = len(id2lettre)\n",
+    "lr=1e-3\n",
+    "\n",
+    "model = RNN(latent_size, input_dim, output_dim)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(params=model.parameters(), lr=lr)\n",
+    "optimizer.zero_grad()\n",
+    "\n",
+    "criterion = maskedCrossEntropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getOuputs(model, seqs):\n",
+    "    X = embedding(seqs[:, :-1])\n",
+    "    hidden_states = model(X.permute(1,0,2)).permute(1,0,2)\n",
+    "    return model.decode(hidden_states).view(-1, X.shape[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleanedNormalizedData = normalize(cleanTrumpData(data).lower().replace(\"!\",\".\").replace(\"?\",\".\"))"
+    "train_loader = DataLoader(TextDataset(trainData), collate_fn=collate_fn, batch_size=BATCH_SIZE, drop_last=True)\n",
+    "test_loader = DataLoader(TextDataset(testData), collate_fn=collate_fn, batch_size=BATCH_SIZE, drop_last=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training ...\n",
+      "Itérations 0: train loss 2.7300894260406494, test loss 2.787170171737671\n",
+      "Itérations 1: train loss 2.630636692047119, test loss 2.6956629753112793\n"
+     ]
+    }
+   ],
    "source": [
-    "BATCH_SIZE = 3\n",
-    "loader = DataLoader(TextDataset(cleanedNormalizedData), collate_fn=collate_fn, batch_size=BATCH_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Classification de sequence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Generation de sequence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test crossEntropy with batch "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss = nn.CrossEntropyLoss(reduction=\"none\")\n",
-    "input = torch.randn(3, 5, requires_grad=True)\n",
-    "target = torch.empty(3, dtype=torch.long).random_(5)\n",
-    "output = loss(input, target)"
+    "# Training loop\n",
+    "print(\"Training ...\")\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    for i, sequences in enumerate(train_loader):\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        #import ipdb; ipdb.set_trace()\n",
+    "        outputs = getOuputs(model, sequences)\n",
+    "        y = sequences[:, 1:].reshape(-1)\n",
+    "\n",
+    "        \n",
+    "        #import ipdb; ipdb.set_trace()\n",
+    "        train_loss = criterion(outputs, y)\n",
+    "        train_loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        #writer.add_scalar('Loss/train', train_loss, epoch)\n",
+    "\n",
+    "    model.eval()\n",
+    "    for i, sequences in enumerate(test_loader):\n",
+    "        with torch.no_grad():\n",
+    "            outputs = getOuputs(model, sequences)\n",
+    "            y = sequences[:, 1:].reshape(-1)\n",
+    "\n",
+    "            test_loss = criterion(outputs, y)\n",
+    "\n",
+    "        #writer.add_scalar('Loss/test', test_loss, epoch)\n",
+    "  #if(epoch%10==0):\n",
+    "    print(f\"Itérations {epoch}: train loss {train_loss}, test loss {test_loss}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.6207, -0.7542,  0.0652,  0.3838, -3.1213],\n",
-       "        [ 0.3055, -1.0484,  0.3335,  0.2342, -0.8832],\n",
-       "        [ 0.5134, -0.6117,  0.8091,  0.4683,  0.0508]], requires_grad=True)"
+       "'t'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input"
+    "generate(model, embedding, model.decode, EOS_IX, start=\"t\", maxlen=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([4, 0, 2])"
+       "([[19, 6, 29], [19, 29, 21], [19, 29, 2]],\n",
+       " [tensor(-6.1789, grad_fn=<AddBackward0>),\n",
+       "  tensor(-6.5342, grad_fn=<AddBackward0>),\n",
+       "  tensor(-6.5370, grad_fn=<AddBackward0>)])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([4.7126, 1.2592, 1.1522], grad_fn=<NllLossBackward>)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss2 = nn.CrossEntropyLoss(reduction=\"mean\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output2 = loss2(input, target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(2.3747, grad_fn=<NllLossBackward>)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(2.3747, grad_fn=<MeanBackward0>)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output.mean()"
+    "generate_beam(model, embedding, model.decode, EOS_IX, 3, start=\"the\", maxlen=3)"
    ]
   },
   {
@@ -254,6 +199,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
